# cw-nfts

./: .gitignore  Beaker.toml  Cargo.toml  Makefile  Makefile.toml  README.md  TODOS.md  build-schema.sh  build.sh  cargo-generate.toml  justfile  taplo.toml
ci/bootstrap-env/: Cargo.toml
ci/bootstrap-env/src/: main.rs
ci/integration-tests/: .gitignore  Cargo.toml  README.md
ci/integration-tests/gas_reports/: test-1684095571.json  test-1763516178.json  test-1814160560.json  test-265147129.json  test-4134311413.json  test-55710236.json
ci/integration-tests/src/helpers/: chain.rs
ci/integration-tests/src/tests/: cw721_base_test.rs  mod.rs
contracts/cw1155-base/: Cargo.toml  NOTICE  README.md
contracts/cw1155-base/examples/: schema.rs
contracts/cw1155-base/schema/: balance_of_response.json  cw1155-base.json  execute_msg.json  instantiate_msg.json  nft_info_response.json  query_msg.json  token_info_response.json
contracts/cw1155-base/src/: contract_tests.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/cw1155-metadata-onchain/: Cargo.toml  README.md
contracts/cw1155-metadata-onchain/examples/: schema.rs
contracts/cw1155-metadata-onchain/schema/: all_balances_response.json  execute_msg.json  nft_info_response.json  token_info_response.json
contracts/cw1155-metadata-onchain/src/: lib.rs
contracts/cw1155-royalties/: Cargo.toml  README.md
contracts/cw1155-royalties/examples/: schema.rs
contracts/cw1155-royalties/src/: error.rs  lib.rs  query.rs
contracts/cw2981-royalties/: Cargo.toml  NOTICE  README.md
contracts/cw2981-royalties/.cargo/: config.toml
contracts/cw2981-royalties/examples/: schema.rs
contracts/cw2981-royalties/schema/: check_royalties_response.json  contract_info_response_for__empty.json  cw2981-royalties.json  cw2981_query_msg.json  execute_msg.json  operators_response.json  query_msg.json  query_msg_for__cw2981_query_msg.json  royalties_info_response.json
contracts/cw2981-royalties/schema/raw/: execute.json  query.json  response_to_all_nft_info.json  response_to_nft_info.json  response_to_ownership.json
contracts/cw2981-royalties/src/: error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/cw4973/: Cargo.toml  README.md
contracts/cw4973/examples/: schema.rs
contracts/cw4973/schema/: cw4973.json
contracts/cw4973/schema/raw/: execute.json  instantiate.json  response_to_all_nft_info.json
contracts/cw4973/src/: error.rs  lib.rs  msg.rs  state.rs  test.rs
contracts/cw721-base/: Cargo.toml  MIGRATING.md  README.md  helpers.ts
contracts/cw721-base/examples/: schema.rs
contracts/cw721-base/schema/: all_nft_info_response.json  contract_info_response_for__empty.json  cw721-base.json  execute_msg.json  instantiate_msg.json  instantiate_msg_for__empty.json  owner_of_response.json  query_msg.json  query_msg_for__empty.json
contracts/cw721-base/schema/raw/: execute.json  response_to_extension.json
contracts/cw721-base/src/: contract_tests.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  multi_tests.rs  query.rs  state.rs  tests.rs
contracts/cw721-base/src/upgrades/: mod.rs  v0_16.rs  v0_17.rs
contracts/cw721-expiration/: Cargo.toml  README.md
contracts/cw721-expiration/examples/: schema.rs
contracts/cw721-expiration/schema/: cw721-expiration.json  execute_msg.json  instantiate_msg.json  migrate_msg.json  query_msg.json
contracts/cw721-expiration/schema/raw/: execute.json  instantiate.json  query.json  response_to_all_nft_info.json  response_to_nft_info.json  response_to_tokens.json
contracts/cw721-expiration/src/: contract_tests.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/cw721-fixed-price/: Cargo.toml  NOTICE  README.md
contracts/cw721-fixed-price/examples/: schema.rs
contracts/cw721-fixed-price/schema/: config_response.json  cw721-fixed-price.json  execute_msg.json  instantiate_msg.json
contracts/cw721-fixed-price/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/cw721-metadata-onchain/: Cargo.toml  README.md
contracts/cw721-metadata-onchain/examples/: schema.rs
contracts/cw721-metadata-onchain/schema/: all_nft_info_response.json  approved_response.json  cw721-metadata-onchain.json  execute_msg.json  query_msg.json  query_msg_for__empty.json  query_msg_for__my_query_msg.json
contracts/cw721-metadata-onchain/src/: lib.rs  msg.rs
contracts/cw721-non-transferable/: Cargo.toml
contracts/cw721-non-transferable-with-metadata-onchain/: Cargo.toml  README.md
contracts/cw721-non-transferable-with-metadata-onchain/examples/: schema.rs
contracts/cw721-non-transferable-with-metadata-onchain/schema/: nft.json
contracts/cw721-non-transferable-with-metadata-onchain/src/: error.rs  lib.rs  msg.rs
contracts/cw721-non-transferable/examples/: schema.rs
contracts/cw721-non-transferable/schema/: all_nft_info_response.json  collection_info.json  collection_info_response.json  execute_msg.json  instantiate_msg.json  minter_response.json  nft_info_response.json  query_msg.json
contracts/cw721-non-transferable/src/: lib.rs  msg.rs  query.rs  state.rs
contracts/cw721-receiver/: Cargo.toml
contracts/cw721-receiver-tester/: Cargo.toml  README.md
contracts/cw721-receiver-tester/.cargo/: config.toml
contracts/cw721-receiver-tester/schema/: cw721-receiver-tester.json
contracts/cw721-receiver-tester/src/: contract.rs  error.rs  msg.rs
contracts/cw721-receiver-tester/tests/: multitest.rs
contracts/cw721-receiver/schema/: cw721-receiver.json
contracts/cw721-receiver/src/: contract.rs  msg.rs
contracts/cw721-receiver/tests/: multitest.rs
contracts/cw721-sylvia-base/: Cargo.toml  README.md
contracts/cw721-sylvia-base/.cargo/: config
contracts/cw721-sylvia-base/schema/: cw721-sylvia-base.json
contracts/cw721-sylvia-base/src/: base.rs  contract.rs  error.rs  lib.rs  multitest.rs  responses.rs  state.rs
templates/cw721-template/: Cargo.toml  README.md  cargo-generate.toml  test_generate.sh
templates/cw721-template/examples/: schema.rs
templates/cw721-template/src/: contract.rs  error.rs  lib.rs  msg.rs  tests.rs
(+63 files in other folders)
