[workspace]
resolver = "2"
members = ["packages/*", "contracts/*"]

[workspace.package]
version       = "0.19.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/CosmWasm/cw-nfts"
homepage      = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"
rust-version  = "1.78"

[workspace.dependencies]
cosmwasm-schema = "^2.1"
cosmwasm-std    = "^2.1"
cw2             = "^2.0"
cw20            = "^2.0"
cw721           = { version = "*", path = "./packages/cw721" }
cw721-016       = { git = "https://github.com/CosmWasm/cw-nfts", tag = "v0.16.0", package = "cw721" } # needed for backwards compatibility and legacy migration
cw721-base      = { version = "*", path = "./contracts/cw721-base" }
cw721-base-015  = { git = "https://github.com/CosmWasm/cw-nfts", tag = "v0.15.0", package = "cw721-base" } # needed for testing legacy migration
cw721-base-016  = { git = "https://github.com/CosmWasm/cw-nfts", tag = "v0.16.0", package = "cw721-base" } # needed for testing legacy migration
cw721-metadata-onchain-016  = { git = "https://github.com/CosmWasm/cw-nfts", tag = "v0.16.0", package = "cw721-metadata-onchain" } # needed for testing legacy migration
cw721-base-017  = { git = "https://github.com/CosmWasm/cw-nfts", tag = "v0.17.0", package = "cw721-base" } # needed for testing legacy migration
cw721-base-018  = { git = "https://github.com/CosmWasm/cw-nfts", tag = "v0.18.0", package = "cw721-base" } # needed for testing legacy migration
cw-multi-test   = { version = "^2.1", features = ["cosmwasm_2_0"] }
# TODO: switch to official https://github.com/larry0x/cw-plus-plus
# requires merge of https://github.com/larry0x/cw-plus-plus/pull/25
cw-ownable      = { git = "https://github.com/mintthemoon/cw-plus-plus", revision = "eb4445e07cd0da2859c7313de569b83a773cc407", package = "cw-ownable" }
cw-storage-plus = "^2.0"
cw-utils        = "^2.0"
schemars        = "^0.8"
serde           = { version = "^1.0", default-features = false, features = ["derive"] }
thiserror       = "^1.0"
url             = "^2.5"

[profile.release.package.cw721-base]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-expiration]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-metadata-onchain]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-fixed-price]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-non-transferable]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-receiver-tester]
codegen-units = 1
incremental   = false

[profile.release.package.cw2981-royalties]
codegen-units = 1
incremental   = false

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
