[workspace]
members  = ["packages/*", "contracts/*"]
resolver = "2"

[workspace.package]
documentation = "https://docs.cosmwasm.com"
edition       = "2021"
homepage      = "https://cosmwasm.com"
license       = "Apache-2.0"
repository    = "https://github.com/CosmWasm/cw-nfts"
rust-version  = "1.81"
version       = "0.21.0"

[workspace.dependencies]
anyhow          = "^1.0"
bech32          = "^0.11"
cosmwasm-schema = "^2.2"
cosmwasm-std    = "^2.2"
cw-multi-test   = { version = "^2.2", features = ["cosmwasm_2_1"] }
cw-ownable      = { version = "^2.1" }
cw-storage-plus = "^2.0"
cw-utils        = "^2.0"
cw2             = "^2.0"
cw20            = "^2.0"
cw721           = { version = "0.21.0", path = "./packages/cw721" }
cw721-base      = { version = "0.21.0", path = "./contracts/cw721-base" }
schemars        = "^0.8"
serde           = { version = "^1.0", default-features = false, features = ["derive"] }
sha2            = "^0.10"
thiserror       = "^1.0"
url             = "^2.5"

[profile.release.package.cw721-base]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-expiration]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-metadata-onchain]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-fixed-price]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-non-transferable]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-receiver-tester]
codegen-units = 1
incremental   = false

[profile.release.package.cw2981-royalties]
codegen-units = 1
incremental   = false

[profile.release]
debug            = false
debug-assertions = false
lto              = true
opt-level        = "s"
overflow-checks  = true
rpath            = false
