[package]
name = "bootstrap-env"
version = "0.1.0"
edition = "2021"
authors = ["de_husk", "ekez <ekez@withoutdoing.com>"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosm-orc = { version = "2.3.1" }
cw20 = "0.15"
cw-utils = "0.15"
cosmwasm-std = { version = "1.1", features = ["ibc3"] }
cw721-base = { version = "*", path = "../../contracts/cw721-base" }

anyhow = { version = "1.0.51"}
env_logger = "0.9.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
