[package]
name = "cw1155-royalties"
authors = [
  "Alex Lynham <alex@lynh.am>",
  "shab <dirtyshab@protonmail.com>"
]
description = "Basic implementation of royalties for cw1155 with token level royalties"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { workspace = true }
cw1155 = { workspace = true }
cw1155-base = { workspace = true, features = ["library"] }
cw2981-royalties = { path = "../cw2981-royalties", features = ["library"] }
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
