[package]
authors       = ["Alex Lynham <alex@lynh.am>"]
description   = "Basic implementation of royalties for cw721 NFTs with token level royalties"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
name          = "cw2981-royalties"
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-ownable      = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
url             = { workspace = true }
