[package]
name = "cw4973"
authors = [
  "HoaNM6 Aura <mr.nmh175@gmail.com>",
]
version = "0.16.0"
edition = "2021"
description = "CW4973 NFT example"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = "1.1.0"
cosmwasm-std = "1.1.0"
cw-storage-plus = "0.16.0"
cosmwasm-storage = "1.1.2"
cw2 = "0.16.0"
cw721 = { path = "../../packages/cw721", version = "0.16.0" }
cw721-base = { path = "../cw721-base", version = "0.16.0", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
sha2 = "0.10.6"
bech32 = { version = "0.9.1" }
ripemd = "0.1.3"
serde_json = "1.0.87"
base64 = "0.13.1"
hex = "0.4.3"
