[package]
name = "cw4973"
description = "CW4973 NFT example"
authors = [
  "HoaNM6 Aura <mr.nmh175@gmail.com>",
]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
schemars        = { workspace = true }
serde           = { workspace = true }

thiserror = { version = "1.0.31" }
sha2 = "0.10.6"
bech32 = { version = "0.9.1" }
ripemd = "0.1.3"
serde_json = "1.0.87"
base64 = "0.13.1"
hex = "0.4.3"
