[package]
name          = "cw721-base"
description   = "Basic implementation cw721 NFTs"
authors       = [
  "mr-t <mr-t@arkprotocol.io>",
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Orkun Külçe <orkun@deuslabs.fi>",
]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
rust-version  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std    = { workspace = true }
cw-ownable      = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
serde           = { workspace = true }

[dev-dependencies]
cw721-017       = { workspace = true }
cw721-018       = { workspace = true }
