[package]
authors = [
  "mr-t <mr-t@arkprotocol.io>",
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Orkun Külçe <orkun@deuslabs.fi>",
]

description   = "`cw721-base` with generic `TNftExtension` and `TCollectionExtension` for empty, on-chain metadata, or custom extensions"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
name          = "cw721-base"
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false              # disable doc tests

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-ownable      = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
serde           = { workspace = true }
