[package]
name          = "cw721-fixed-price"
authors       = ["Vernon Johnson <vtj2105@columbia.edu>"]
version       = "0.16.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/CosmWasm/cw-nfts"
homepage      = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1.5"
cosmwasm-std    = "1.1.5"
cw2             = "0.16.0"
cw20            = "0.16.0"
cw721-base      = { version = "0.16.0", path = "../cw721-base", features = ["library"] }
cw-storage-plus = "0.16.0"
cw-utils        = "0.16.0"
schemars        = "0.8.10"
serde           = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror       = "1.0.31"

[dev-dependencies]
prost = "0.10"
