[package]
name = "cw721-metadata-onchain"
version = "0.14.0"
authors = [
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Orkun Külçe <orkun@deuslabs.fi>",
]
edition = "2021"
description = "Example extending CW721 NFT to store metadata on chain"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-nfts"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1.0"
cosmwasm-std = "1.1.0"
cw2 = "0.14.0"
cw721 = { path = "../../packages/cw721" }
cw721-base = { path = "../cw721-base", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
