[package]
authors       = ["Eliseo Cohen <eliseoci@users.noreply.github.com>"]
description   = "Non-transferable CW721 NFT example"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
name          = "cw721-non-transferable"
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
