[package]
authors       = ["Christoph Otter <chris@confio.gmbh>"]
description   = "A basic contract that can receive a cw721 token for testing purposes"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
name          = "cw721-receiver-tester"
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
