[package]
name = "cw721-sylvia-base"
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-ownable      = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
sylvia          = { workspace = true }
thiserror       = { workspace = true }
